t+ps:[[د امريکا متحده ايالات]] ([[WT:EDIT|Assisted]]) <United States of America#38617914>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -130,6 +130,7 @@
 *: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane}}, {{t+|nn|USA}}
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ|sc=Cyrl}}
 * Palauan: {{t|pau|Merikel}}
+* Pashto: {{t|ps|د امريکا متحده ايالات|tr=də amrīkā mutaḥidâ iyālāt|sc=ps-Arab}}
 * Persian: {{t|fa|ایالات متحده آمریکا|tr=eyâlât-e mottahede-ye âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}, {{t+|fa|آمریکا|tr=âmrikâ|sc=fa-Arab}}
 * Plains Cree: {{t|crk|kihci-môhkomân-askîhk}}
 * Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}
