t+io:[[kordoponteto]] ([[WT:EDIT|Assisted]]) <bridge#38620081>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -385,6 +385,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * German: {{t+|de|Steg|m}}
 * Greek: {{t+|el|καβαλάρης|m}}
 *: Ancient: {{t|grc|δόναξ|sc=polytonic}}
+* Ido: {{t+|io|kordoponteto}}
 * Irish: {{t+|ga|droichead|m}}
 * Japanese: {{t+|ja|駒|tr=こま, koma|sc=Jpan}}
 * Macedonian: {{t|mk|кобилица|f|sc=Cyrl}}
