--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -1,5 +1,8 @@
 ==Translingual==
 
+===Etymology===
+{{Han etyl}}
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=44336|canj=TKRP|ids=⿱若心}}
 
