--- a/en/昵/昵.16990.wikitext
+++ b/en/昵/昵.16990.wikitext
@@ -11,12 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[nik1]]|y=nik1}}
-
-# {{defn|lang=yue|sort=日05}}
+==Chinese==
+{{zh-see|暱}}
 
 ----
 
@@ -38,15 +34,6 @@
 {{ko-hanja|hangeul=닐, 일, 녜, 예|eumhun=|rv=nil, il, nye, ye|mr=nil, il, nye, mye|y=nil, il, nyey, yey}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[nì]] ([[ni4]])|wg=ni<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
