--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -2,6 +2,7 @@
 {{stroke order|type=animate}}
 
 ===Etymology===
+{{Han etyl}}
 {{Han compound|土|也|c1=s|c2=p|t1=earth|ls=psc}}
 
 ===Han character===
