--- a/en/址/址.12995.wikitext
+++ b/en/址/址.12995.wikitext
@@ -1,6 +1,9 @@
 {{also|阯}}
 ==Translingual==
 
+===Etymology===
+{{Han etyl}}
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=41110|canj=GYLM|ids=⿰土止}}
 
