--- a/en/垦/垦.13098.wikitext
+++ b/en/垦/垦.13098.wikitext
@@ -11,21 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=han2|y=han2|tra=墾}}
-
-# {{defn|lang=yue|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=墾|pin=[[kěn]] ([[ken3]])|wg=k'en<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
+==Chinese==
+{{zh-see|墾}}
 
 [[fr:垦]]
 [[mg:垦]]
