--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -1,13 +1,7 @@
 ==Translingual==
 
-===Etymology===
-{{Han compound|莫|心|alt2=㣺|c1=p|c2=s|t2=heart|ls=psc}}
-
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=44333|canj=TAKP|ids=⿱莫㣺}}
-
-# [[long for]], [[desire]]
-# [[admire]]
 
 ====Related characters====
 * [[募]] [[墓]] [[幕]]
@@ -20,6 +14,9 @@
 
 ==Chinese==
 {{zh-forms}}
+
+===Glyph origin===
+{{Han compound|莫|心|alt2=㣺|c1=p|c2=s|t2=heart|ls=psc}}
 
 ===Pronunciation===
 {{zh-pron
@@ -34,7 +31,13 @@
 
 ===Definitions===
 {{zh-hanzi}}
-# Admire, adore, yearn
+
+# to [[admire]], [[adore]]
+# to [[long for]], to [[desire]], to [[yearn]]
+
+===Compounds===
+{{zh-der|不慕|仰慕|企慕|傾慕|嚮慕|孺慕|弋者何慕|心慕手追|心慕筆追|思慕|怨慕|想慕|愛慕|感慕|慕勢|慕化|慕古|慕名|慕名而來|慕容|慕效|慕義|慕羶|慕藺|慕道|慕顧|戀慕|敬慕|景慕|欽慕|歆慕|永慕|注慕|渴慕|百慕達|終天之慕|羨慕|羶慕|蟻慕|貪位慕祿|貪榮慕利|貪財慕勢|趨財慕勢|軫慕|那達慕|鄉風慕義}}
+
 ----
 
 ==Japanese==
