Reverted edits by [[Special:Contributions/2602:304:CE27:7019:646D:A145:D625:AA14|2602:304:CE27:7019:646D:A145:D625:AA14]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <curve#38651085>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -34,7 +34,7 @@ From {{etyl|la|en}} {{m|la|curvus||bent, curved}}
 # {{label|en|geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{label|en|algebraic geometry}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
 # {{label|en|topology}} A one-dimensional [[continuum]].
-# {{label|en|slang|informal|usually in plural}} The attractive shape of a woman's body.
+# {{label|en|informal|usually in plural}} The attractive shape of a woman's body.
 
 ====Derived terms====
 {{rel-top4|terms derived from curve (noun)}}
