added [[Category:en:Fats and oils]] using [[Help:Gadget-HotCat|HotCat]] <butter#38655872>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -436,6 +436,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 #*: {{...}} these animals lacked self-correcting mechanisms of the kind seen in modern head-'''butters''' such as goats and big-horn sheep that would have kept the tremendous forces aligned with the rest of the skeleton.
 
 [[Category:en:Condiments]]
+[[Category:en:Fats and oils]]
 
 ----
 
