t+io:[[Nova-Zelando]] ([[WT:EDIT|Assisted]]) <New Zealand#38657567>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -63,6 +63,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Hindi: {{t|hi|न्यू ज़ीलंड}}, {{t|hi|न्यूज़ीलैंड}}, {{t+|hi|न्यूज़ीलैण्ड}}
 * Hungarian: {{t+|hu|Új-Zéland}}
 * Icelandic: {{t+|is|Nýja-Sjáland|n}}
+* Ido: {{t+|io|Nova-Zelando}}
 * Indonesian: {{t+|id|Selandia Baru}}
 * Interlingua: {{t|ia|Nove Zelanda}}
 * Irish: {{t|ga|Nua-Shéalainn|f|alt=An Nua-Shéalainn}}
