--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -163,43 +163,41 @@ From {{etyl|la|en}} {{m|la|curvus||bent, curved}}
 * Tagalog: {{t|tl|kilo}}
 * Turkish: {{t+|tr|eğri}}
 {{trans-bottom}}
-
 {{trans-see|algebraic curve|algebraic curve}}
-{{trans-top|informal: usually in plural: attractive features of a woman}}
-<!--Note: put INFORMAL translations in this table, where these exist-->
-* Danish: {{t|da|kurver|p}}
-* Finnish: {{t|fi|kurvit|p}}
-* French: {{t+|fr|courbes}}
-* Greek: {{t|el|καμπύλες|f-p}}
-* Hebrew: {{t|he|חיטובים|m-p|tr=khit'uvym}}
-* Macedonian: {{t|mk|облини|f-p|tr=óblini}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|curvas|f-p}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|облине|p|sc=Cyrl}}
-*: Roman: {{t+|sh|obline|f-p}}
-* Spanish: {{t+|es|curvas|f-p}}
-* Turkish: {{t+|tr|kıvrım}}
-{{trans-bottom}}
 
-{{trans-top|informal: attractive shape of a woman's body}}
+{{trans-top|informal: usually in plural: attractive features of a woman or informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 * Afrikaans: {{t|af|kurwe}}
 * Bulgarian: {{t+|bg|извивки|p}}
 * Catalan: {{t+|ca|corbes|f-p}}
 * Dutch: {{t+|nl|rondingen|m-p}}, {{t+|nl|figuur|f}}
+* Danish: {{t|da|kurver|p}}
 * Finnish: {{t+|fi|kurvi}} (''usually in plural'' kurvit)
+* Finnish: {{t|fi|kurvit|p}}
+* French: {{t+|fr|courbes}}
 * Greek: {{t+|el|καμπύλη|f}}
+* Greek: {{t|el|καμπύλες|f-p}}
+* Hebrew: {{t|he|חיטובים|m-p|tr=khit'uvym}}
 * Italian: {{qualifier|usually plural}} {{t+|it|curva|f}}
 {{trans-mid}}
+<!--Note: put INFORMAL translations in this table, where these exist-->
 * Macedonian: {{t|mk|облина|f|tr=óblina|sc=Cyrl}}
+* Macedonian: {{t|mk|облини|f-p|tr=óblini}}
+* Portuguese: {{t+|pt|curvas|f-p}}
 * Portuguese: {{t+|pt|curvas|f-p}}
 * Russian: {{t+|ru|изги́б|m}} (usually plural: {{t|ru|изги́бы|m-p}})
 * Serbo-Croatian: {{t|sh|облина|f|tr=oblina|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|облине|p|sc=Cyrl}}
+*: Roman: {{t+|sh|obline|f-p}}
 * Spanish: {{t+|es|curvas|f}}
+* Spanish: {{t+|es|curvas|f-p}}
 * Swedish: {{t+|sv|kurva|c}} (''usually plural''), {{t+|sv|figur|c}} (''usually singular'')
 * Telugu: {{t|te|వంపులు|tr=vampulu|sc=Telu}}, {{t|te|వొంపులు|tr=vompulu|sc=Telu}}
+* Turkish: {{t+|tr|kıvrım}}
+
 {{trans-bottom}}
+
 
 ===Verb===
 {{en-verb|curv}}
