--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -97,7 +97,7 @@ A few old texts use ''[[comen]]'' as the past participle.
 
 In antiquated texts, the verb {{m|en|be}} was sometimes used as the auxiliary instead of {{m|en|have}}, for example, ''Where is he that is born King of the Jews? for we have seen his star in the east, and '''are''' come to worship him.''
 
-The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s--> and the collocation "[[come about]]".
+The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of some set phrases like "[[come about]]", "[[come loose]]", "[[come true]]" and "[[come undone]]".
 
 The collocations “[[come with]]” and “[[come along]]” mean {{m|en|accompany}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
