--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -1,5 +1,6 @@
 {{xsee|[[栗]]''' (different character in Japan)'''}}
 ==Translingual==
+{{character info/new}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=91094|canj=PMWD|ids=⿰忄栗}}
