--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -111,7 +111,7 @@
 
 ====Readings====
 * {{ja-readings
-|goon=[[いち]] (ichi), [[じ]] (ji), {{qualifier|historical}} [[ぢ]] (di)
+|goon=[[じ]] (ji), {{qualifier|historical}} [[ぢ]] (di)
 |kanon=[[ち]] (chi)
 |kun=[[つち]] (tsuchi)
 |nanori=[[どま]] (doma)
