--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -495,6 +495,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Portuguese: {{t+|pt|jogo|m}}, {{t+|pt|brincadeira|f}}
 * Romanian: {{t+|ro|joc|m|f}}
 * Russian: {{t+|ru|игра́|f}}
+* Sanskrit: {{t+|sa|लीला|f|sc=Deva}}
 * Scottish Gaelic: {{t|gd|cleasachd|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|игра|f}}
