t+mi:[[whakatairangi]] ([[WT:EDIT|Assisted]]) <float#38710277>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -162,6 +162,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 
 {{trans-top|to drift aimlessly}}
 {{trans-mid}}
+* Maori: {{t|mi|whakatairangi}}
 {{trans-bottom}}
 
 
