--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -29,6 +29,12 @@
 {{zh-noun}}
 
 # [[price]]
+# {{lb|zh|mathematics|computing|etc.}} [[value]]
+#: {{zh-x|絕對值|absolute value}}
+# be [[worth]]
+#: {{zh-x|這 塊 玉 值 一 萬 美元。|This jade is worth ten thousand dollars.}}
+# [[worthwhile]]
+#: {{zh-x|這 趟 旅行 太值了。|This journey is absolutely worthwhile.}}
 
 ===References===
 * {{R:twedu|A00179}}
