--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -10,7 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms|s=伞|alt=繖}}
+{{zh-forms|s=伞|alt=繖,𢄻,伞,𠋔,𠌂,𠍘,𠎃,𡙘,𡙫,𦇕,仐}}
 
 ===Pronunciation===
 {{zh-pron
@@ -27,6 +27,8 @@
 }}
 
 ===Definitions===
+{{zh-hanzi}}
+
 # [[umbrella]], [[parasol]]
 #: {{zh-x|雨傘|umbrella}}
 #: {{zh-x|陽傘|parasol}}
@@ -34,10 +36,13 @@
 #: {{zh-x|跳傘|parachute}}
 #: {{zh-x|降落傘|parachute}}
 #: {{zh-x|傘兵|paratrooper; parachuter}}
-# resembling an umbrella
+# umbrella-like object
 
-===References===
-* {{R:twedu|A00224}}
+====Synonyms====
+{{zh-dial}}
+
+===Compounds===
+{{zh-der|三簷傘|傘兵|傘兵部隊|傘包|和尚打傘|導傘|打傘|拖曳傘|撐傘|旱傘|核傘|油紙傘|洋傘|游湖借傘|火傘|火傘高張|燈傘|萬民傘|禿子打傘|紙傘|網傘菌|菌傘|藍傘|跳傘|跳傘塔|降落傘|陽傘|雨傘|雨傘節|飛行傘|高空跳傘}}
 
 ----
 
