--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -377,12 +377,12 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 {{en-noun}}
 
 # {{label|en|Australia|Queensland|northern|_|New South Wales|and|elsewhere|colloquial}} A suitcase, particularly a schoolbag.
+#* '''1964''', George Johnston, ''My Brother Jack'':
+#*: No, she just paid up proper-like t' the end of the week, an' orf she went with 'er '''port''', down t' the station, I suppose.
 #* '''2001''', Sally de Dear, ''The House on Pig Island'', [http://books.google.com.au/books?id=ZoEWGZqF-CAC&pg=PA8&dq=%22port%22|%22ports%22+schoolbag+australia+OR+queensland+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2Z3lT_KvOqKsiAe98KxY&redir_esc=y#v=onepage&q=%22port%22|%22ports%22%20schoolbag%20australia%20OR%20queensland%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 8],
 #*: As they left the classroom, Jennifer pointed at the shelves lining the veranda. “Put your '''port''' in there.”
 #*: “What?” asked Penny.
 #*: “Your '''port''' - your school bag, silly. It goes in there.”
-#* '''1964''', George Johnston, ''My Brother Jack'':
-#*: No, she just paid up proper-like t' the end of the week, an' orf she went with 'er port, down t' the station, I suppose.
 
 ----
 
