--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -38,6 +38,8 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 #: {{ux|en|My grandfather '''fought''' the Nazis in World War II.}}
 # {{label|en|transitive}} To [[try]] to [[overpower]]; to [[fiercely]] [[counteract]].
 #: {{ux|en|The government pledged to '''fight''' corruption.}}
+#* '''2014''', Ann Aguirre, ''The Shape of My Heart'' (page 42)
+#*: I '''fought''' a sneeze as Max took my hand and led me into the chapel.
 # {{label|en|transitive|archaic}} To cause to fight; to manage or manoeuvre in a fight.
 #: {{ux|en|to '''fight''' cocks;&emsp; to '''fight''' one's ship}}
 
