--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -41,6 +41,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 |passage=We live our lives in three dimensions for our threescore and ten allotted years. Yet every '''branch''' of contemporary science, from statistics to cosmology, alludes to processes that operate on scales outside of human experience: the millisecond and the nanometer, the eon and the light-year.}}
 # {{label|en|nautical}} A [[certificate]] given by {{w|Trinity House}} to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s.
 # {{label|en|computer architecture}} A sequence of {{l|en|code}} that is conditionally {{l|en|executed}}.
+# {{label|en|rail transport}} A [[branch line]].
 
 ====Related terms====
 * {{l|en|branch banking}}
