--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -65,7 +65,6 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Isthmus Zapotec: {{t|zai|bigu}}
 * Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}, {{t+|it|testuggine|f}}
 * Japanese: {{qualifier|tortoise or turtle}} {{t+|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t+|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
-* Norman: {{t|nrf|tortue|f}}
 * Kannada: {{t+|kn|ಆಮೆ|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|sc=Knda}}
 * Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|sc=Cyrl}}
 * Khmer: {{t+|km|អណ្ដើក|tr=ɑndaək|sc=Khmr}}
@@ -73,10 +72,10 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Korean: {{qualifier|tortoise or turtle}} {{t+|ko|거북|sc=Kore}}, {{t+|ko|거북이|sc=Kore}}
 * Kyrgyz: {{qualifier|tortoise or turtle}} {{t+|ky|ташбака|sc=Cyrl}}
 * Lao: {{qualifier|tortoise or turtle}} {{t+|lo|ເຕົ່າ|sc=Laoo}}
-{{trans-mid}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{qualifier|tortoise or turtle}} {{t+|lv|bruņurupucis|m}}
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t+|lt|vėžlys|m}}
+{{trans-mid}}
 * Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|kura-kura}}
@@ -85,7 +84,10 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Maori: {{t|mi|honuwhenua}}
 * Nahuatl: {{t|nah|āyotl}}
 * Navajo: {{t|nv|chʼééh digháhii}}
-* Norwegian: {{t+|no|skilpadde}}, {{t+|no|skjelpadde}}, {{t|no|landskilpadde|f}}
+* Norman: {{t|nrf|tortue|f}}
+* Norwegian:
+*: Bokmål: {{t+|nb|skilpadde|m|f}}, {{t|nb|landskilpadde|m|f}}
+*: Nynorsk: {{t+|nn|skjelpadde|f}}, {{t|nn|landskjelpadde|f}}
 * Pali: {{t|pi|kacchapa|m}}
 * Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}, {{t+|fa|باخه|tr=bâxe|sc=fa-Arab}}
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m-an}}, {{t+|pl|żółw lądowy|m-an}}
