--- a/en/偆/偆.11093.wikitext
+++ b/en/偆/偆.11093.wikitext
@@ -1,5 +1,8 @@
 ==Translingual==
 
+===Etymology===
+{{Han etym}}
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=25263|canj=OQKA|ids=⿰亻春}}
 
