/* Translingual */ +historical forms <偳#38808146>

--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -1,5 +1,8 @@
 ==Translingual==
 
+===Etymology===
+{{Han etym}}
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=22227|canj=OUMB|ids=⿰亻耑}}
 
