--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -1,5 +1,8 @@
 ==Translingual==
 
+===Etymology===
+{{Han etym}}
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=47120|canj=GBR|ids=⿰土冋}}
 
