--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -1,10 +1,5 @@
 ==Translingual==
 
-===Etymology===
-{{Han compound|音|心|t2=heart|ls=ic}}
-
-Top component unrelated to [[音]].
-
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=00336|canj=YTAP|ids=⿱音心}}
 
@@ -21,6 +16,12 @@ Top component unrelated to [[音]].
 
 ==Chinese==
 {{zh-forms}}
+
+===Glyph origin===
+{{Han etym}}
+{{Han compound|音|心|t2=heart|ls=ic}}
+
+Top component unrelated to {{m|zh|音}}.
 
 ===Pronunciation===
 {{zh-pron
