--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -36,7 +36,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日02}}
 
-# rising sun
+# [[rising]] [[sun]]
 
 ====Readings====
 * {{ja-readings|on=[[きょく]] (kyoku)|kun=[[あさひ]] (asahi)}}
