--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,7 +1,7 @@
 ==French==
 
 ===Etymology===
-From {{inh|fro|fr|jeudi}}, from {{inh|fr|la}} ''Iovis dīēs'', variant of {{m|la|dīēs Iovis}} ("day of Jupiter").
+From {{inh|fr|fro|jeudi}}, from {{inh|fr|la}} ''Iovis dīēs'', variant of {{m|la|dīēs Iovis}} ("day of Jupiter").
 
 ===Pronunciation===
 * {{IPA|/ʒø.di/|lang=fr}}
