/* Adverb */ fi translation <straight#38856461>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -341,6 +341,11 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Portuguese: {{t+|pt|direto}}
 {{trans-bottom}}
 
+{{trans-top|continuously}}
+* Finnish: {{t|fi|yhteen menoon}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Noun===
 {{en-noun}}
 
