/* Noun */ "heightened" subsenses bundled together as "colloquial" to true senses; added Finnish translations <straight#38856612>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -349,27 +349,25 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ===Noun===
 {{en-noun}}
 
-# Something that is not crooked or bent.
-## A part of a [[racecourse]], [[running]] [[track]] or other road, ''etc.'', that is not [[curved]].
-##* {{quote-book|author=Robert Newton|title=Runner|location=New York, N.Y.|publisher={{w|Alfred A. Knopf}}|year=2009|page=191|isbn=978-0-307-49035-3|passage=After four grueling laps, the race had come down to a sprint. Into the '''straight''', although my legs were burning, I called on them for more, and they responded. On my inside the maroon singlet came with me, until it was just the two of us heading for the line.}}
-##* {{quote-book|author=Gene W. Zepp|title=24 Heures Du Mans|location=[S.l.]|publisher={{w|Xlibris}}|year=2011|page=19|isbn=978-1-4628-6700-4|passage=Seppi started the engine, then shifted first gear and sped away into second, then third and fourth gear. Frank heard the roar of the Porsche's engine further down the '''straight''' and the back short straight. He held a stopwatch in his hand, waiting for him to come up into the '''straight''' from the hairpin curve.}}
+# Something that is not crooked or bent such as a part of a road or track.
+#* {{quote-book|author=Robert Newton|title=Runner|location=New York, N.Y.|publisher={{w|Alfred A. Knopf}}|year=2009|page=191|isbn=978-0-307-49035-3|passage=After four grueling laps, the race had come down to a sprint. Into the '''straight''', although my legs were burning, I called on them for more, and they responded. On my inside the maroon singlet came with me, until it was just the two of us heading for the line.}}
+#* {{quote-book|author=Gene W. Zepp|title=24 Heures Du Mans|location=[S.l.]|publisher={{w|Xlibris}}|year=2011|page=19|isbn=978-1-4628-6700-4|passage=Seppi started the engine, then shifted first gear and sped away into second, then third and fourth gear. Frank heard the roar of the Porsche's engine further down the '''straight''' and the back short straight. He held a stopwatch in his hand, waiting for him to come up into the '''straight''' from the hairpin curve.}}
 # {{label|en|[[poker]]}} Five cards in [[sequence]].
-# ''Colloquial uses.''
-## A [[heterosexual]].
-##: ''My friends call '''straights''' "heteros".''
-## {{label|en|slang}} A [[normal]] [[person]]; someone in [[mainstream]] society.
-##* {{quote-video|year=1989|title=[[wikipedia:Ghostbusters II|Ghostbusters II]]|people=[[wikipedia:Bill Murray|Bill Murray]]|role=[[wikipedia:Peter Venkman|Peter Venkman]]|passage=Boys! Boys! You're scaring the '''straights''', okay? Is there any way that we could do this tomorrow?}}
-##* {{quote-book|year=2014|first=Matthew D.|last=Tribbe|title=No Requiem for the Space Age|chapter=Turning a Miracle into a Bummer|isbn=9780199313525|page=150|passage=More importantly, ''Blows Against the Empire'' {{...}} more than any other work revealed the split vision towards space exploration among many in the counter-culture: a romantic vision of the freedom offered by space that had been fostered by a lifetime of science fiction consumption, immersion in a technological society, the countercultural yearning for speed and “the road,” and, thanks to LSD and other hallucinogens, a unique preappreciation of space traveling not available to '''straights''', versus the bland, oppressive vision of exploration offered by NASA, itself just one part of a larger destructive system that was devastating Earth and that could only offer further oppression in space, not liberation.}}
-## {{label|en|slang}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
-##* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
-##*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
+# {{lb|en|colloquial}} A [[heterosexual]].
+#: ''My friends call '''straights''' "heteros".''
+# {{lb|en|slang}} A [[normal]] [[person]]; someone in [[mainstream]] society.
+#* {{quote-video|year=1989|title=[[wikipedia:Ghostbusters II|Ghostbusters II]]|people=[[wikipedia:Bill Murray|Bill Murray]]|role=[[wikipedia:Peter Venkman|Peter Venkman]]|passage=Boys! Boys! You're scaring the '''straights''', okay? Is there any way that we could do this tomorrow?}}
+#* {{quote-book|year=2014|first=Matthew D.|last=Tribbe|title=No Requiem for the Space Age|chapter=Turning a Miracle into a Bummer|isbn=9780199313525|page=150|passage=More importantly, ''Blows Against the Empire'' {{...}} more than any other work revealed the split vision towards space exploration among many in the counter-culture: a romantic vision of the freedom offered by space that had been fostered by a lifetime of science fiction consumption, immersion in a technological society, the countercultural yearning for speed and “the road,” and, thanks to LSD and other hallucinogens, a unique preappreciation of space traveling not available to '''straights''', versus the bland, oppressive vision of exploration offered by NASA, itself just one part of a larger destructive system that was devastating Earth and that could only offer further oppression in space, not liberation.}}
+# {{lb|en|slang}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
+#* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
+#*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
 
 ====Synonyms====
 * {{sense|heterosexual}} {{l|en|hetero}}, {{l|en|breeder}}
 * {{sense|normal person}} see [[Wikisaurus:mainstreamer]]
 
 ====Translations====
-{{trans-top|part of a racecourse or running track that is not curved}}
+{{trans-top|something that is not crooked or bent}}
 * Czech: {{t|cs|rovinka|f}}
 * Finnish: {{t+|fi|suora}}
 * French: {{t|fr|ligne droite|f}}
@@ -380,8 +378,6 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Russian: {{t+|ru|пряма́я|f}}
 * Swedish: {{t+|sv|raksträcka|c}}, {{t+|sv|raka|c}}
 {{trans-bottom}}
-
-{{trans-see|[[heterosexual]]}}
 
 {{trans-top|five cards in sequence}}
 * Armenian: {{t|hy|սթրեյթ}}, {{t|hy|սթրիթ}}
@@ -403,6 +399,18 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Portuguese: {{t|pt|straight|m}}
 * Russian: {{t+|ru|стрейт|m}}, {{t|ru|стрит|m}}
 * Swedish: {{t+|sv|stege|c}}
+{{trans-bottom}}
+
+{{trans-see|[[heterosexual]]}}
+
+{{trans-top|mainstream person}}
+* Finnish: {{t|fi|[[tavallinen]] [[ihminen]]}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|ordinary cigarette}}
+* Finnish: {{t|fi|[[tavallinen]] [[savuke]]}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{checktrans-top}}
