--- a/en/坷/坷.13050.wikitext
+++ b/en/坷/坷.13050.wikitext
@@ -10,12 +10,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ho1]], [[ho2]]|y=ho1, ho2}}
+===Pronunciation===
+{{zh-pron
+|m=kě
+|c=ho2,ho1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|命途坎坷|坎坷}}
 
 ----
 
@@ -37,15 +50,6 @@
 {{ko-hanja|hangeul=가|rv=ga|mr=ka}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kě]] ([[ke3]])|wg=k'o<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
