--- a/en/倯/倯.11056.wikitext
+++ b/en/倯/倯.11056.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|c=sung1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[しょう]] (shō), [[しゅ]] (shu)|kun=[[おこたる]] (okotaru), [[ののしる]] (nonoshiru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[sōng]] ([[song1]])|wg=sung<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 [[fr:倯]]
 [[hu:倯]]
