--- a/en/偕/偕.11109.wikitext
+++ b/en/偕/偕.11109.wikitext
@@ -11,12 +11,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=gaai1}}
+===Pronunciation===
+{{zh-pron
+|m=xié,jiē
+|c=gaai1,haai4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|偕偕|偕同|偕老|偕行|君子偕老|期頤偕老|白頭偕老|百年偕老|相偕|與民偕樂|計偕}}
 
 ----
 
@@ -38,15 +51,6 @@
 {{ko-hanja|hangeul=[[해]], [[혜]]|rv=hae, hye|mr=hae, hye}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偕]]
 [[li:偕]]
