--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -10,12 +10,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=gyun6}}
+===Pronunciation===
+{{zh-pron
+|m=juàn
+|c=gyun6
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|不倦|乏倦|亹亹不倦|倦乏|倦勤|倦容|倦怠|倦意|倦游|倦累|倦色|倦遊|倦飛|倦鳥知返|力學不倦|勞倦|厭倦|困倦|好學不倦|娓娓不倦|孜孜不倦|孳孳不倦|怠倦|悶倦|拘倦|朝夕不倦|樂善不倦|樂此不倦|猒倦|疲倦|睏倦|終日不倦|誨人不倦|誨而不倦|諄諄不倦|鞍馬勞倦}}
 
 ----
 
@@ -46,15 +59,6 @@
 {{ko-hanja|hangeul=권|rv=gwon|mr=kwŏn}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[juàn]] ([[juan4]]), [[qìng]] ([[qing4]])|wg=chüan<sup>4</sup>, ch'ing<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
