--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -12,12 +12,27 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[kap1]], [[saap3]]|y=kap1, saap3}}
+===Pronunciation===
+{{zh-pron
+|m=圾
+|c=saap3,ngap6,kap1
+|mn=sap
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物|搭圾}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -39,19 +54,6 @@
 {{ko-hanja|hangeul=급|rv=geup|mr=kŭp}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jí]] ([[ji2]])|wg=chi<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
-
-====Compounds====
-* {{zh-l|垃圾}}
-* {{l|cmn|垃圾食品|tr=lājī shípǐn||junk food}}
 
 ----
 
