--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -11,12 +11,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=faai3}}
+===Pronunciation===
+{{zh-pron
+|m=kuǐ
+|c=faai3,gwai1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|傀偉|傀儡|傀儡家庭|傀儡戲|傀儡政權|傀然|懸絲傀儡|文樂傀儡|線抽傀儡|肉傀儡|藥發傀儡|跳傀儡}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -38,15 +54,6 @@
 {{ko-hanja|hangeul=괴|rv=goe|mr=koe}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[guī]] ([[gui1]])|wg=kuei<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
 
 ----
 
