--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -13,12 +13,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gai2]], [[gai6]], [[git6]]|y=gai2, gai6, git6}}
+===Pronunciation===
+{{zh-pron
+|m=jì
+|c=git6,gai6,gai2
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|偈偈|偈子|偈言|偈頌}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -40,15 +56,6 @@
 {{ko-hanja|hangeul=[[게]], [[걸]]|rv=ge, geol|mr=ke, kŏl}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[jié]] ([[jie2]])|wg=chi<sup>4</sup>, chieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
