--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -103,7 +103,7 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[kiện]], [[kẹn]]|rs=人09}}
+{{vi-hantu|[[kiện]], [[kẹn]], [[lương]]|rs=人09}}
 
 # {{defn|lang=vi|sort=人09}}
 
