--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -1,9 +1,6 @@
 {{also|伪|僞}}
 ==Translingual==
 
-===Etymology===
-{{Han compound|亻|為|t1=man|t2=to make|ls=ic}}, originally "artificial".
-
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=22227|canj=OIKF|ids=⿰亻為}}
 
@@ -15,6 +12,9 @@
 ==Chinese==
 {{zh-forms|s=伪|t2=僞}}
 
+===Glyph origin===
+{{Han compound|亻|為|t1=man|t2=to make|ls=psc|c1=s|c2=p}}, originally “artificial”.
+
 ===Pronunciation===
 {{zh-pron
 |m=偽
@@ -22,40 +22,25 @@
 |h=pfs=ngúi
 |mn=gūi
 |w=2hhue
-|mc=
+|mc=y
 |oc=y
-|cat=a
+|cat=a,n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[false]], [[counterfeit]], [[bogus]], [[fake]]
-#: {{zh-x|虛偽|sham; false; hypocritical; hypocrisy}}
+# [[false]]; [[counterfeit]]; [[bogus]]; [[fake]]
+#: {{zh-x|虛偽|hypocritical; hypocrisy}}
 #: {{zh-x|偽造|to forge; to counterfeit}}
 #: {{zh-x|偽鈔|counterfeit banknote}}
 #: {{zh-x|偽政權|puppet government}}
+# [[falsehood]]; [[untruthfulness]]
+# [[illegal]]; [[illegitimate]]
+# [[pseudo-]]
 
-====Compounds====
-{{der5
-|{{zh-l|偽鈔/伪钞}}
-|{{zh-l|偽軍/伪军}}
-|{{zh-l|偽君子/伪君子}}
-|{{zh-l|偽劣/伪劣}}
-|{{zh-l|偽麻黃鹼/伪麻黄碱}}
-|{{zh-l|偽善/伪善}}
-|{{zh-l|偽飾/伪饰}}
-|{{zh-l|偽書/伪书}}
-|{{zh-l|偽託/伪托}}
-|{{zh-l|偽造/伪造}}
-|{{zh-l|偽證/伪证}}
-|{{zh-l|偽政府/伪政府}}
-|{{zh-l|偽譔/伪撰}}
-|{{zh-l|偽裝/伪装}}
-|{{zh-l|偽足/伪足}}
-|{{zh-l|偽作/伪作}}
-|{{zh-l|虛偽/虚伪}}
-}}
+===Compounds===
+{{zh-der|偽鈔|偽軍|偽君子|偽劣|偽麻黃鹼|偽善|偽飾|偽書|偽託|偽造|偽證|偽政府|偽譔|偽裝|偽足|偽作|虛偽|乘偽行詐|作偽|偽品|偽國|偽幣|偽政權|偽本|偽滿洲國|偽組織|偽經|偽藥|偽裝滲透|偽造文書|別裁偽體|去偽存真|情偽|真偽|真偽莫辨|矯言偽行|矯飾偽行|詐偽|邪偽|飾偽}}
 
 ----
 
