--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -19,21 +19,19 @@
 |c=ok3
 |h=pfs=ok
 |mn=ok
-|w=5oq
+|w=4oq
 |mc=3
 |oc=1,3
 |cat=a
 }}
 
-====Adjective====
-{{zh-adj}}
+====Definitions====
+{{zh-hanzi}}
 
 # [[evil]], [[wicked]], [[mean]], [[bad]], [[foul]]
+#: {{zh-ant|善}}
 #: {{zh-x|惡毒|malicious}}
-#: {{zh-x|他 經常 做 惡，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
-
-====Antonyms====
-* {{zh-l|善}}
+#: {{zh-x|他 經常 做惡，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
 
 ===Pronunciation 2===
 {{zh-pron
@@ -42,14 +40,14 @@
 |h=pfs=vu
 |mn=òⁿ
 |mna=Taiwanese-The_Vowel_onn.ogg
-|w=3u
+|w=2u
 |mc=2
 |oc=2,2
 |cat=v
 }}
 
-====Verb====
-{{zh-verb}}
+====Definitions====
+{{zh-hanzi}}
 
 # to [[hate]]; to [[loathe]]
 #: {{zh-x|厭惡|to loathe}}
@@ -63,80 +61,13 @@
 |cat=intj
 }}
 
-====Interjection====
-{{zh-interj}}
+====Definitions====
+{{zh-hanzi}}
 
-# {{non-gloss definition|used to express surprise}}: [[oh]]; [[ah]]
+# {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
 
 ===Compounds===
-{{der5
-|{{zh-l|惡心}}
-|{{zh-l|惡霸}}
-|{{zh-l|惡報}}
-|{{zh-l|惡變}}
-|{{zh-l|惡病質}}
-|{{zh-l|惡臭}}
-|{{zh-l|惡道}}
-|{{zh-l|惡德}}
-|{{zh-l|惡鬥}}
-|{{zh-l|惡毒}}
-|{{zh-l|惡感}}
-|{{zh-l|惡狗}}
-|{{zh-l|惡貫滿盈}}
-|{{zh-l|惡鬼}}
-|{{zh-l|惡棍}}
-|{{zh-l|惡果}}
-|{{zh-l|惡耗}}
-|{{zh-l|惡狠狠}}
-|{{zh-l|惡化}}
-|{{zh-l|惡疾}}
-|{{zh-l|惡蹟}}
-|{{zh-l|惡口}}
-|{{zh-l|惡辣}}
-|{{zh-l|惡浪}}
-|{{zh-l|惡劣}}
-|{{zh-l|惡露|èlù|[[lochia]]}}
-|{{zh-l|惡罵}}
-|{{zh-l|惡夢}}
-|{{zh-l|惡名}}, {{zh-l|惡名兒}}
-|{{zh-l|惡魔}}
-|{{zh-l|惡唸}}
-|{{zh-l|惡癖}}
-|{{zh-l|惡氣}}
-|{{zh-l|惡趣}}
-|{{zh-l|惡人}}
-|{{zh-l|惡煞}}
-|{{zh-l|惡少}}
-|{{zh-l|惡聲}}
-|{{zh-l|惡聲惡氣}}
-|{{zh-l|惡水}}
-|{{zh-l|惡俗}}
-|{{zh-l|惡徒}}
-|{{zh-l|惡習}}
-|{{zh-l|惡相}}
-|{{zh-l|惡心}}
-|{{zh-l|惡行}}
-|{{zh-l|惡性}}
-|{{zh-l|惡性循環}}
-|{{zh-l|惡性腫瘤}}
-|{{zh-l|惡兇兇}}
-|{{zh-l|惡言}}
-|{{zh-l|惡言惡語}}
-|{{zh-l|惡意}}
-|{{zh-l|惡因}}
-|{{zh-l|惡語}}
-|{{zh-l|惡語中傷}}
-|{{zh-l|惡運}}
-|{{zh-l|惡戰}}
-|{{zh-l|惡仗}}
-|{{zh-l|惡濁}}
-|{{zh-l|惡阻}}
-|{{zh-l|惡作劇}}
-|{{zh-l|可惡}}
-}}
-
-===References===
-* {{thcwd|8366}}
+{{zh-der|惡心|惡霸|惡報|惡變|惡病質|惡臭|惡道|惡德|惡鬥|惡毒|惡感|惡狗|惡貫滿盈|惡鬼|惡棍|惡果|惡耗|惡狠狠|惡化|惡疾|惡蹟|惡口|惡辣|惡浪|惡劣|惡露:[[lochia]]|惡罵|惡夢|惡名|惡魔|惡唸|惡癖|惡氣|惡趣|惡人|惡煞|惡少|惡聲|惡聲惡氣|惡水|惡俗|惡徒|惡習|惡相|惡行|惡性|惡性循環|惡性腫瘤|惡兇兇|惡言|惡言惡語|惡意|惡因|惡語|惡語中傷|惡運|惡戰|惡仗|惡濁|惡阻|惡作劇|可惡|三惡道|不念舊惡|不惡而嚴|中惡|乞留惡濫|五濁惡世|交惡|作惡|作惡多端|做好做惡|元惡|元惡大奸|元惡大憝|凶惡|凶神惡煞|刁惡|剗惡除奸|剪惡除奸|助惡|勸善懲惡|勸善戒惡|勸善黜惡|十惡|十惡不赦|千刁萬惡|厭惡|同惡相助|同惡相救|同惡相求|同惡相濟|善善惡惡|喑惡叱吒|嚴惡|大惡|好善嫉惡|好善惡惡|好惡|好生惡殺|好諛惡直|好逸惡勞|姑惡|嫉惡|嫉惡好善|嫉惡如仇|嫉惡若仇|嫌好道惡|嫌惡|差惡|彰善癉惡|忒惡|怒惡|怙惡不悛|怙惡不改|性惡說|惡例|惡兆|惡勢力|惡叉白賴|惡名昭彰|惡哏哏|惡地|惡婦|惡嫌|惡子|惡孽|惡客|惡寒|惡性倒閉|惡性競爭|惡性貧血|惡惡|惡惡實實|惡惡從短|惡憐|惡支殺|惡曜|惡月|惡有|惡有惡報|惡業|惡模惡樣|惡歲|惡法|惡漢|惡濕居下|惡犬|惡瘡|惡發|惡直醜正|惡眉惡眼|惡稔禍盈|惡稔罪盈|惡稔貫盈|惡積禍盈|惡紫奪朱|惡緣惡業|惡衣惡食|惡衣糲食|惡衣菲食|惡衣蔬食|惡補|惡言潑語|惡言詈辭|惡訊|惡詫|惡識|惡貫禍盈|惡賴|惡躁|惡逆|惡運當頭|惡醉強酒|惡限|惡障|惡風|惡食|惡黨|愛遠惡近|憎惡|懲惡勸善|懲惡獎善|懷惡不悛|戀生惡死|打惡心|扶善懲惡|抑惡揚善|掩惡揚善|掩惡溢美|掩罪藏惡|播惡遺臭|改惡向善|改惡從善|改惡行善|旌善懲惡|日趨惡劣|是非善惡|欣生惡死|欺善怕惡|止惡揚善|深惡痛嫉|深惡痛絕|溢惡|濟惡|為惡不悛|無惡不作|犯惡|狠惡|獰惡|畏影惡跡|疾惡|疾惡好善|疾惡如仇|疾惡若仇|痛惡|癉惡彰善|禍因惡積|禍盈惡稔|禍稔惡盈|萬惡|稔惡不悛|積惡|積惡餘殃|窮凶惡極|窮凶極惡|窮山惡水|粗惡|粗衣惡食|罪大惡極|罪惡|罪惡如山|罪惡感|罪惡昭著|罪惡深重|罪惡滔天|罪惡貫盈|美惡|羞惡|腐惡|自食惡果|舊惡|苦思惡想|菲衣惡食|薄惡|褒善貶惡|褒賢遏惡|討惡剪暴|諱惡不悛|貧嘴惡舌|貪生惡死|賞善罰惡|賣惡|辟惡|辟惡除患|逢君之惡|遏惡揚善|遠惡|邪惡|酒惡|醜惡|醜類惡物|釁惡|長君之惡|長惡不悛|除惡務本|除惡務盡|除惡扶善|陰惡|險惡|隱惡揚善|面善心惡|面惡心善|風塵惡俗|首惡|鬼怕惡人}}
 
 ----
 
