--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心 (G), ⿱原心 (KJV)}}
 
 # [[sincere]], [[honest]], [[virtuous]]
 
