--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -1,6 +1,7 @@
 {{also|願}}
 ==Translingual==
-
+===Etymology===
+While {{Han simp|願|nocap=y}}, it is already a character. {{Han compound|ls=psc|原|心|c1=p|c2=s|t2=heart}}.
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心 (G), ⿱原心 (KJV)}}
 
