--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -769,7 +769,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ==Italian==
 
 ===Etymology===
-{{etyl|en|it}}
+{{bor|it|en}}.
 
 ===Noun===
 {{head|it|noun|g=m|invariable}}
@@ -788,7 +788,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ==Spanish==
 
 ===Etymology===
-{{etyl|en|es}}
+{{bor|es|en}}.
 
 ===Noun===
 {{es-noun|m}}
