--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -29,8 +29,8 @@
 {{zh-pron
 |m=chuí
 |c=seoi4
-|mn=sôe/suî/sê
-|mn_note=sôe - vernacular, suî - literary
+|mn=sôe/sûi/sê
+|mn_note=sôe - vernacular, sûi - literary
 |mc=y
 |oc=y
 |ma=
