--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -49,7 +49,7 @@ From {{inh|nrf|fro|jeudi}}, from {{inh|nrf|la}} ''Jovis diēs'' or ''Iovis diēs
 ==Old French==
 
 ===Etymology===
-From {{inh|fro|la}} ''Jovis diēs'' or ''Iovis diēs'', variant of {{m|la|diēs Iovis}}.
+From {{inh|fro|la||Jovis diēs}} or {{m|la||Iovis diēs}}, variant of {{m|la|diēs Iovis}}.
 
 ===Noun===
 {{fro-noun|m}}
