--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -543,11 +543,12 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Chinese:
 *: Mandarin: {{t|cmn|戲劇|sc=Hani}}, {{t+|cmn|戏剧|tr=xìjù|sc=Hani}}, {{t|cmn|話劇|sc=Hani}}, {{t+|cmn|话剧|tr=huàjù|sc=Hani}}
 * Czech: {{t+|cs|hra|f}}
-* Danish: {{t+|da|stykke}}, {{t|da|spil}}
+* Danish: {{t+|da|stykke}}, {{t|da|spil}}, {{t|da|skuespil|n}}
 * Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
 * Erzya: {{t|myv|налкума}}
 * Esperanto: {{t|eo|teatraĵo}}
 * Ewe: {{t|ee|fefe}}
+* Faroese: {{t|fo|sjónleikur|n}}
 * Finnish: {{t+|fi|näytelmä}}
 * French: {{t+|fr|pièce de théâtre|f}}
 * German: {{t+|de|Schauspiel|n}}
