--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -770,7 +770,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ==Italian==
 
 ===Etymology===
-{{bor|it|en}}.
+{{bor|it|en|play}}.
 
 ===Noun===
 {{head|it|noun|g=m|invariable}}
