--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -789,7 +789,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ==Spanish==
 
 ===Etymology===
-{{bor|es|en}}.
+{{bor|es|en|play}}.
 
 ===Noun===
 {{es-noun|m}}
