--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -138,6 +138,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Macedonian: {{t|mk|желудник|m|tr=žéludnik}}, {{t|mk|стомак|m|tr=stómak}}
 * Malay: {{t|ms|perut}}
 * Maltese: {{t|mt|stonku|m}}
+* Manchu: {{t|mnc|ᡤᡠᠸᡝᠵᡳᡥᡝ|tr=guwejihe}}
 * Mandinka: {{t|mnk|konoo}}
 * Marathi: {{t|mr|जठर|sc=Deva}}
 * Mongolian: {{t-needed|mn}}
