/* Scottish Gaelic */ <port#38996439>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -760,6 +760,9 @@ From {{inh|gd|sga|port||bank, shore (of river or sea); landing-place, haven; ban
 * {{l|gd|longphort}}
 * {{l|gd|port-adhair}}
 
+===Mutation===
+{{gd-mut-cons|p|ort}}
+
 ===References===
 * {{R:DIL|34476|head=1 port}}
 * {{R:DIL|34477|head=2 port}}
