--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -12,6 +12,9 @@
 ==Chinese==
 {{zh-forms|alt=値}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=zhí
@@ -47,16 +50,16 @@
 |oc=y
 |ma=y
 |dial=n
-|cat=n
+|cat=v
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{†}} to [[hold]] [[upright]]
 
-===References===
-* {{R:twedu|A00179}}
+===Compounds===
+{{zh-der|一文不值|一錢不值|不值|不值一哂|不值一文|不值一看|不值一笑|不值一錢|不值得|不值當|不值錢|保值|值勤|值回票價|值夜|值宿|值年|值得|值日|值星|值星官|值更|值月|值班|值遇|值錢|價值|價值判斷|價值指標|價值標準|價值衝突|價值觀|價值觀念|價值論|價值連城|價值邏輯|儲值票|公告現值|剩餘價值|加值稅|加值網路|升值|報值掛號|增值|帳面價值|幣值|平均值|年產值|成交總值|承值|承諾值|數值|數值分析|數值控制|新聞價值|時值|月值年災|期望值|正值|比值|淨值|淨值法|現值|產值|當值|社會價值|等值|等值價格|絕對值|總值|股票價值|調值|豹值|貶值|輪值|近似值|適值|酸鹼值|量值|附加價值|面值|音值}}
 
 ----
 
