--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -292,6 +292,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Latin: {{t|la|tono}}
 * Luxembourgish: {{t|lb|donneren}}
 {{trans-mid}}
+* Manchu: {{t|mnc|ᠠᡴᠵᠠᠮᠪᡳ|tr=akjambi}}
 * Occitan: {{t+|oc|tronar}}
 * Polish: {{t|pl|grzmieć}}, {{t|pl|zagrzmieć}}
 * Portuguese: {{t+|pt|trovoar}}, {{t+|pt|trovejar}}
