--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -8,7 +8,7 @@
 * {{homophones|lang=en|plumb}}
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{m|ang|plūme}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prūmōn}}. Cognate with German {{m|de|Pflaume}}, Dutch {{m|nl|pruim}}. Compare {{m|en|prune}}
+From {{etyl|ang|en}} {{m|ang|plūme}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prūmǭ}}. Cognate with German {{m|de|Pflaume}}, Dutch {{m|nl|pruim}}. Compare {{m|en|prune}}
 
 ====Noun====
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
