--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -4,7 +4,7 @@
 {{was wotd|2008|November|28}}
 
 ===Etymology===
-From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{der|en|ar|سَمْت||direction, path}} which is in itself a weak abbreviation of {{m|ar|سَمْت الرَأْس||direction of the head}}.
+From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{der|en|ar|سَمْت||direction, path}} which is in itself a weak abbreviation of {{m|ar|سَمْت الّرَأْس||direction of the head}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈzɛn.ɪθ/|lang=en}}
@@ -55,7 +55,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 
 ====Related terms====
 * {{l|en|azimuth}}, {{l|en|nadir}}
-*: Both from or related to {{m|ar|سمت|اَلسَّمْت|direction}}.
+*: Both from or related to {{m|ar|سمت|السَّمْت|direction}}.
 
 ====Translations====
 {{trans-top|astronomy: point vertically above a position or observer}}
