--- a/en/垤/垤.13096.wikitext
+++ b/en/垤/垤.13096.wikitext
@@ -11,12 +11,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[dit6]]|y=dit6}}
+===Pronunciation===
+{{zh-pron
+|m=dié
+|c=dit6
+|h=pfs=te
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|蝸居蟻垤|蟻垤}}
 
 ----
 
@@ -38,15 +52,6 @@
 {{ko-hanja|hangeul=질|rv=jil|mr=chil}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dié]] ([[die2]])|wg=tieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
