--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -27,6 +27,7 @@ From {{etyl|la|en}} {{m|la|i.e.}}, an abbreviation of {{m|la|id est||it is}}.
 * Afrikaans: {{t|af|d.w.s.}}
 * Arabic: {{t|ar|يَعْنِي}}
 * Armenian: {{t+|hy|այսինքն}}
+* Bashkir: {{t|ba|йәғни|sc=Cyrl}}
 * Bulgarian: {{t|bg|т.е.|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|也就是|sc=Hani}}
