--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -4,45 +4,52 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=28221|canj=OOMN|ids=⿰亻俞}}
 
-# to [[steal]]
-# [[burglar]], [[thief]]
-
 ====References====
 * {{Han ref|kx=0112.030|dj=0239.020|hdz=10193.020|uh=5077|ud=20599}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=偸}}
 
-===Alternative forms===
-* {{zh-l|偸}}
+===Glyph origin===
+{{Han compound|人|alt1=亻|俞|ls=psc|c1=s|c2=p}}.
 
 ===Pronunciation===
 {{zh-pron
 |m=tōu
 |c=tau1
-|cat=v
+|c-t=heu1
+|h=pfs=thêu
+|md=tău
+|mn=thau
+|w=1theu
+|mc=y
+|oc=y
+|cat=v,adv,n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[thief]]; [[burglar]]
-#* {{zh-l|小偷|thief}}
-# [[stealthily]]; [[secretly]]; [[covertly]]
-#* {{zh-l|偷看|to peek, to peep}}
-#* {{zh-l|偷听|to eavedrop}}
-# to have an extra-marital [[relationship]]
-#* {{zh-l|偷情|adultery}}
-#* {{zh-l|偷腥|to have an affair}}
-#* {{zh-l|偷漢|to take a lover}}
-# to [[while away]] without purpose
-#* {{zh-l|偷懶|to be lazy}}
-#* {{zh-l|偷生|to live without purpose}}
 # to [[steal]]; to [[snatch]]
-#* {{zh-x|我們 的 錢 被 '''偷''' 了。|We had our money '''stolen'''.}}
-#* {{zh-x|扒手 '''偷''' 了 她 的 皮 夹子 跑 了。|The pickpocket '''pinched''' her purse and ran away.}}
+#: {{zh-x|我們 的 錢 被 偷 了。|We had our money '''stolen'''.}}
+#* {{zh-x|扒手 偷 了 她 的 皮 夹子 跑 了。|The pickpocket '''pinched''' her purse and ran away.}}
+# [[stealthily]]; [[secretly]]; [[covertly]]
+#: {{zh-x|偷看|to peek, to peep}}
+#: {{zh-x|偷聽|to eavedrop}}
+# [[thief]]; [[burglar]]
+#: {{zh-x|小偷|thief}}
+# to have an extra-marital [[relationship]]
+#: {{zh-x|偷情|adultery}}
+#: {{zh-x|偷腥|to have an affair}}
+#: {{zh-x|偷漢|to take a lover}}
+# to [[while away]] without purpose
+#: {{zh-x|偷懶|to be lazy}}
+#: {{zh-x|偷生|to live without purpose}}
+
+===Compounds===
+{{zh-der|偷世竊名|偷人|偷偷|偷偷伴伴|偷偷抹抹|偷偷摸摸|偷偷的|偷兒|偷取|偷吃|偷合取容|偷合苟容|偷嘴|偷嚐禁果|偷墮|偷天換日|偷婆娘|偷安|偷寒送暖|偷工減料|偷巧|偷彈珠淚|偷情|偷懶|偷拍|偷換|偷斤減兩|偷春|偷春體|偷期|偷期暗會|偷東摸西|偷梁換柱|偷榮|偷活|偷渡|偷渡客|偷渡黃牛|偷漏|偷漢|偷漢子|偷營|偷營劫寨|偷狗戲雞|偷生|偷生苟活|偷盜|偷目竊望|偷眼|偷睛|偷稅|偷空|偷窺|偷竊|偷笑|偷聲|偷聽器|偷腥|偷薄|偷襲|偷覷|偷貓遞狗|偷跑|偷閒|偷雞吊狗|偷雞摸狗|偷雞盜狗|偷食|偷饞抹嘴|偷香|偷香竊玉|塞耳偷鈴|小偷|巧偷豪奪|弄玉偷香|忍垢偷生|忍恥偷生|忍辱偷生|忙裡偷閒|掩耳偷鈴|掩鼻偷香|換日偷天|摸雞偷狗|東偷西摸|減工偷料|狗偷鼠竊|珠淚偷彈|直偷硬取|竊玉偷香|苟且偷安|苟且偷生|送暖偷寒|鑿壁偷光|靡衣偷食|韓壽偷香|鼠竊狗偷}}
 
 ----
 
