--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -2,9 +2,6 @@
 ==Translingual==
 {{stroke order|strokes=9}}
 
-===Etymology===
-{{liushu|psc}} Originally [[曐]]. The upper part [[晶]] is the semantic part, and is shaped like twinkling stars. The lower part [[生]] is the phonetic part.
-
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60104|canj=AHQM|ids=⿱日生}}
 
@@ -16,10 +13,15 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|c2=p|t1=twinkling stars}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=xīng,er=y
 |c=sing1,seng1
+|c-t=lhen1
 |h=pfs=sên
 |md=sĭng
 |mn=chheⁿ/chhiⁿ/seng
@@ -27,69 +29,28 @@
 |mc=y
 |oc=y
 |ma=Zh-xing.ogg
-|cat=n}}
+|cat=n,pn
+}}
 
-===Noun===
-{{zh-noun}}
+===Definitions===
+{{zh-hanzi}}
 
-# [[star]]
-# [[heavenly body]]
+# [[star]]; [[planet]]; [[heavenly body]]
+#: {{zh-x|星星{xing}|star}}
+#: {{zh-x|恆星|(fixed) '''star'''}}
+# [[star]]-shaped [[object]]
+# [[star]]; [[celebrity]]
+#: {{zh-x|明星|bright '''star'''; celebrity}}
+# [[weight]] [[mark]]s on a [[steelyard]]
+# a [[bit]]; a [[tiny]] [[bit]]
+# [[tiny]]; [[minute]]
+# [[whitish]]; [[white]]
+# [[numerous]] and [[scattered]] everywhere; [[countless]]
+# [[rapid]]; [[flying]]
+# {{surname|lang=zh}}
 
-====Synonyms====
-* {{sense|star}} {{zh-l|恆星/恒星}}
-* {{sense|star}} {{zh-l|星星}}
-
-===See also===
-* {{sense|star, celebrity}} {{zh-l|明星}}
-
-====Compounds====
-{{attention|zh|needs conversion to Traditional}}
-{{top3}}
-* {{l|zh|星期|tr=xīngqī|gloss=days of the week}}
-* {{l|zh|星期一|tr=xīngqīyī|gloss=Monday}}
-* {{l|zh|星期二|tr=xīngqī'èr|gloss=Tuesday}}
-* {{l|zh|星期三|tr=xīngqīsān|gloss=Wednesday}}
-* {{l|zh|星期四|tr=xīngqīsì|gloss=Thursday}}
-* {{l|zh|星期五|tr=xīngqīwǔ|gloss=Friday}}
-* {{l|zh|星期六|tr=xīngqīliù|gloss=Saturday}}
-* {{l|zh|星期日|tr=xīngqīrì|gloss=Sunday}}
-* {{l|zh|星期天|tr=xīngqītiān|gloss=Sunday}}
-* {{l|zh|星辰}}
-* {{l|zh|星斗}}
-* {{l|zh|星光}}
-* {{l|zh|星汉}}
-* {{l|zh|星号}}
-{{mid3}}
-* {{l|zh|星河}}
-* {{l|zh|星火}}
-* {{l|zh|星火燎原}}
-* {{l|zh|星际}}
-* {{l|zh|星空}}
-* {{l|zh|星罗棋布}}
-* {{l|zh|星落云散}}
-* {{l|zh|星球}}
-* {{l|zh|星术}}
-* {{l|zh|星霜}}
-* {{l|zh|星体}}
-* {{l|zh|星图}}
-* {{l|zh|星团}}
-* {{l|zh|星系}}
-{{mid3}}
-* {{l|zh|星系核}}
-* {{l|zh|星相}}
-* {{l|zh|星象}}
-* {{l|zh|星星}}
-* {{l|zh|星星点点}}, {{l|zh|星星点点的}}
-* {{l|zh|星星之火，可以燎原}}
-* {{l|zh|星宿}}
-* {{l|zh|星眼}}
-* {{l|zh|星夜}}
-* {{l|zh|星移斗转}}
-* {{l|zh|星移物换}}
-* {{l|zh|星云}}
-* {{l|zh|星子}}
-* {{l|zh|海星}}
-{{bottom}}
+===Compounds===
+{{zh-der|星期:days of the week|星期一:Monday|星期二:Tuesday|星期三:Wednesday|星期四:Thursday|星期五:Friday|星期六:Saturday|星期日:Sunday|星期天:Sunday|星辰|星斗|星光|星漢|星號|星河|星火|星火燎原|星際|星空|星羅棋布|星落雲散|星球|星術|星霜|星體|星圖|星團|星系|星系核|星相|星象|星星|星星點點|星星之火，可以燎原|星宿|星眼|星夜|星移斗轉|星移物換|星雲|星子|海星|一天星斗|一星兒|一星子|一星星|一路福星|七星|七星壇|七星山|七星板|七星燈|七星瓢蟲|三星|中星|中星儀|主序星|主星|九大行星|五星|五星上將|五星連珠|井中視星|人造衛星|伴星|使星|侵星|值星|值星官|偵察衛星|傳播衛星|內行星|冒金星兒|冥王星|分星擘兩|列星|剋星|劍眉星眼|北斗七星|北極星|半星|南極星沉|南極星輝|占星|占星術|吉星文|吉星高照|同步衛星|周期彗星|哈雷彗星|唾沫星子|喪門星|嘎巴流星|四星|土星|坍縮星|壽星|壽星老兒|外星人|外行星|夜叉星|大明星|大星殞落|大步流星|大熊星座|大犬星座|大行星|天南星|天狼星|天王巨星|天王星|天罡星|天貴星|天關客星|天關星|天鵝星座|天鷹星座|太白星|太白酒星|太白金星|太陰星|奎星高照|奔星|女星|妖星|孤星淚|宋應星|官星|官星透露|定盤星|客星|寒星|寥若晨星|寶星|將星|導航衛星|小星|小熊星座|小行星|巨星|帚星|帝星|帶月披星|彗星|影星|急如星火|急於星火|恆星|恆星年|恆星日|恆星月|恆星系|恆星週期|恩星照命|惑星|戴星|戴月披星|披星帶月|披星戴月|拱極星|指極星|掃帚星|掃星|掩星|摘星|摘星樓|擘兩分星|救星|文昌星|文星和合|文曲星|文章星斗|斗轉星移|新星|明星|昏星|星主|星使|星光列車|星兒|星前月下|星君|星命|星士|星奔|星媽|星官|星家|星宿海|星座|星形|星彩|星戰計畫|星探|星散|星族|星旗|星旗電戟|星星之火|星曆|星曆錶|星月交輝|星期報|星條旗|星橋|星次|星歲|星氣|星洲|星流|星燭|星盤|星眸|星眸皓齒|星等|星算|星羅雲布|星羅雲散|星群|星色|星芒狀|星蟲|星行|星行夜歸|星表|星言夙駕|星迴|星速|星降|星院|星陳夙駕|星隕|星際塵埃|星際大戰|星際微塵|星際物質|星雞魚|星離雨散|星飛電掣|星馳|星馳電發|星馳電走|星駕|星鯊|星點彈塗|星點河魨|昭如日星|晨星|晨炊星飯|景星|景星勛章|景星慶雲|智多星|暫星|曉星|曙後星孤|月明星稀|月眉星眼|月約星期|月落星沉|木星|本命星|桃花星|棋布星羅|棋羅星布|橢圓星系|櫺星門|歌星|武曲星|歲星|毛頭星|氣象衛星|水星|沒星秤|河外星系|油星|流星|流星報馬|流星趕月|流星鎚|流星雨|流星馬|海事衛星|海王星|測量衛星|港星|準星|滿天星|滿眼金星|漏星堂|漩渦星雲|潢星|火德星君|火星|火星塞|炳如日星|炳若日星|煙飛星散|煞星|熠熠紅星|燎星|爆發星|物換星移|牽牛星|獵戶星座|球狀星團|瓦解星散|瓦解星飛|甲第星羅|男星|畢宿星團|畢拉彗星|發射星雲|白矮星|白虎星|百武彗星|皓齒星眸|目似明星|目若朗星|直播衛星|眼若流星|眾星拱北|眾星拱月|眾星拱辰|眾星捧月|矮星|矮行星|視星等|福星|福星高照|秤星|移星換斗|穀神星|童星|紅星|紇剌星|經星|繁星|織女星|羅福星|老人星|老壽星|聚星|脈動星|脈衝星|花星|蟹狀星雲|行星|行星儀|行星風|衛星|衛星國家|衛星導航|衛星日蝕|衛星轉播|衛星通信|衛星都市|衛星門診|衛星雲圖|衛星電視|衛星食|變光星|變星|豔星|賊仔星|賊星|超巨星|超新星|辰星|追星族|追星趕月|通信衛星|通訊衛星|酒星|醫卜星相|金星|鈴鐺壽星|鎮星|隕星|雙星|雨零星散|零星|零零星星|電卷星飛|電影明星|電掣星馳|順星|類地行星|類新星|類星體|類木行星|魁星|魔星|鱗鋏星鐔}}
 
 {{zh-cat|Astronomy}}
 
