t+mt:[[żebbuġi]] ([[WT:EDIT|Assisted]]) <olive#39062253>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -225,6 +225,7 @@
 * Greek: {{t+|el|λαδής}}
 * Japanese: {{t|ja|オリーブ色|tr=orību-iro}}
 * Kurdish: {{t+|ku|zeytûnî}}, [[reng]][[zeytûnî]]
+* Maltese: {{t|mt|żebbuġi}}
 * Maori: {{t|mi|kārikihāura}}
 * Portuguese: {{t|pt|verde-azeitona}}, {{t+|pt|verde-oliva}}
 * Russian: {{t+|ru|оли́вковый}}
