--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -180,7 +180,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Tambunan Dusun: {{t|kzt|tian}}
 * Tamil: {{t+|ta|இரைப்பை|tr=iraippai|sc=Taml}}
 * Taos: {{t|twf|thį̀ę’éna}}
-* Telugu: {{t+|te|పొట్ట|tr=poṭṭa|sc=Telu}}, {{t+|te|కడుపు|tr=kaḍupu|sc=Telu}}
+* Telugu: {{t+|te|జీర్ణకోశము|sc=Telu}}, {{t+|te|జీర్ణాశయము|sc=Telu}}
 * Thai: {{t+|th|ท้อง|tr=tóng|sc=Thai}}
 * Timugon Murut: {{t|tih|tinaie}}
 * Turkish: {{t+|tr|mide}}, {{t+|tr|karın}}
@@ -281,6 +281,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Swahili: {{t+|sw|tumbo}}
 * Swedish: {{t+|sv|buk}}, {{t+|sv|mage|c}}
 * Tajik: {{t+|tg|шикам|tr=šikam|sc=Cyrl}}
+* Telugu: {{t+|te|పొట్ట|tr=poṭṭa|sc=Telu}}, {{t+|te|కడుపు|tr=kaḍupu|sc=Telu}}
 * Thai: {{t+|th|ท้อง|tr=tóng|sc=Thai}}
 * Tok Pisin: {{t+|tpi|bel}}
 * Turkish: {{t+|tr|karın}}
