--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|cacchen}}, from {{der|en|xno|cachier}}, from {{etyl|ONF.|en}}, from {{der|en|LL.|captiō}}, from {{der|en|la|captō}}, frequentative of {{m|la|capiō}}. Akin to Modern {{cog|fr|chasser}} (from {{cog|fro|chacier}}) and {{cog|es|cazar}}, and thus a {{doublet|chase|lang=en|nocap=1}}. Displaced {{cog|enm|fangen||to catch}}, from {{cog|ang|fōn||to seize, take}} (see {{m|en|fang}}).
+From {{inh|en|enm|cacchen}}, a {{bor|en|xno|cachier|nocap=1}}, from {{der|en|ONF.|-}}, from {{der|en|LL.|captiāre}}, present active infinitive of {{m|la|captiō}}, from {{der|en|la|captō}}, frequentative of {{m|la|capiō}}. Akin to Modern {{cog|fr|chasser}} (from {{cog|fro|chacier}}) and {{cog|es|cazar}}, and thus a {{doublet|chase|lang=en|nocap=1}}. Displaced {{cog|enm|fangen||to catch}}, from {{cog|ang|fōn||to seize, take}} (see {{m|en|fang}}).
 
 The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern English.
 
