--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{PIE root|en|(s)ker}}
-From {{etyl|non|en}} {{m|non|skyrta}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*skurtijǭ}}. Compare {{m|en|shirt}}.
+{{bor|en|non|skyrta}}, from {{der|en|gem-pro|*skurtijǭ}}. Compare {{m|en|shirt}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/skɜːt/|lang=en}}
