--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -42,8 +42,10 @@
 ===Hanja===
 {{ko-hanja|hangeul=[[지]], [[저]]|rv=ji, jeo|y=ci, ce|mr=chi, chŏ}}
 
-# [[sandbank]]
-# [[shore]]
+# an islet
+# a rock in a river
+# an embankment
+# to stop
 
 ----
 
