--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -518,6 +518,7 @@ Cognate to French {{m|fr|comme}}. See also Spanish {{m|es|como}}/{{m|es|cómo}} 
 
 ===Pronunciation===
 * {{hyphenation|co|me|lang=pt}}
+{{rfp|lang=pt}}
 
 ===Verb===
 {{pt-verb-form}}
