--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -104,7 +104,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 {{ja-kanjitab|ほし|yomi=k}}
 {{IPAchar|/posi/}} → {{IPAchar|/fosi/}} → {{IPAchar|/hoɕi/}}
 
-From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
+From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}}, {{cog|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}} and {{cog|map-pro|*bituqen}}.
 
 ===Pronunciation===
 {{ja-pron|yomi=k|ほし|acc=0|acc_ref=DJR,NHK}}
