--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -116,6 +116,14 @@ From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}}
 #: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいている|an endless number of '''stars''' are shining}}
 # {{label|ja|sort=ほし|tarot}}: the [[star|Star]]: the seventeenth [[trump]] or [[major arcana]] [[card]] in most traditional [[tarot]] decks
 
+====Related terms====
+{{rel-top}}
+* {{ja-r|火|ひ}}: [[fire]]
+* {{ja-r|日|ひ}}: [[day]], [[sun]], [[sunlight]]
+* {{ja-r|昼|ひる}}: [[noon]], [[daytime]]
+* {{ja-r|蛍|ほたる}}: [[firefly]]
+{{rel-bottom}}
+
 ====Derived terms====
 {{der-top}}
 * {{ja-r|箒星|ほうきぼし}}: [[comet]]
