--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -46,6 +46,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 ##: {{ux|en|The butler should '''come''' when called.}}
 # {{lb|en|intransitive}} To [[arrive]].
 #: {{ux|en|The guests '''came''' at eight o'clock.}}
+#: {{ux|en|So thoo bist '''comen''' heyr to nim min 'orse frae mee, then?}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
