--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -40,7 +40,7 @@ see {{m|en|find}}.
 
 ===Etymology 2===
 {{PIE root|en|ǵʰewd}}
-From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la|en}} {{m|la|fundare}}.
+From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la|en}} {{m|la|fundō|fundāre}}. Confer with {{m|en|fund}}.
 
 ====Verb====
 {{en-verb}}
@@ -143,7 +143,7 @@ From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la
 * WordNet 3.1: A Lexical Database for English, Princeton University
 
 ===Etymology 3===
-From {{etyl|frm|en}} {{m|frm|fondre}}.
+From {{etyl|frm|en}} {{m|frm|fondre}}, from {{etyl|la|-}} {{m|la|fundō|fundere}}.
 
 ====Verb====
 {{en-verb}}
