t+hi:[[सचिव]] t+bn:[[সম্পাদক]] t+he:[[מזכירה]] ([[WT:EDIT|Assisted]]) <secretary#39507911>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -40,6 +40,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Bashkir: {{t|ba|сәркәтип|sc=Cyrl}}
 * Basque: {{t|eu|idazkari}}
 * Belarusian: {{t|be|сакрата́р|m|sc=Cyrl}}, {{t|be|сакрата́рка|f|sc=Cyrl}}
+* Bengali: {{t|bn|সম্পাদক|sc=Beng}}
 * Bulgarian: {{t+|bg|секрета́р|m|tr=sekretár}}, {{t|bg|секрета́рка|f|tr=sekretárka}}
 * Chechen: {{t|ce|йозанча|sc=Cyrl}}
 * Chinese:
@@ -54,7 +55,8 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Georgian: {{t|ka|მდივანი}}
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f}}
-* Hebrew: {{t|he|מזכיר|m|tr=mazkir}}
+* Hebrew: {{t|he|מזכיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=matskira}}
+* Hindi: {{t+|hi|सचिव|m|sc=Deva}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * Icelandic: {{t|is|ritari|m}}
 * Ido: {{t+|io|sekretario}}
