--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -55,7 +55,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Georgian: {{t|ka|მდივანი}}
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f}}
-* Hebrew: {{t|he|מזכיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=matskira}}
+* Hebrew: {{t|he|מַזְכִּיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=mazkira}}
 * Hindi: {{t+|hi|सचिव|m|sc=Deva}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * Icelandic: {{t|is|ritari|m}}
