--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -28,7 +28,8 @@
 |c=gin6
 |h=pfs=
 |md=
-|mn=kiāⁿ
+|mn=qz,tw,xm,zz:kiāⁿ/qz,tw,xm,zz:kiān
+|mn_note=kiāⁿ - vernacular, kiān - literary
 |w=
 |mc=y
 |oc=y
