Reverted edits by [[Special:Contributions/MahiraYT|MahiraYT]]. If you think this rollback is in error, please leave a message on my talk page. <Yugoslavia#39554422>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -30,7 +30,7 @@
 * Czech: {{t+|cs|Jugoslávie|f}}
 * Danish: {{t|da|Jugoslavien}}
 * Dutch: {{t+|nl|Joegoslavië}}
-* Esperanto: {{t|eo|Jugoslavio}}, {{t|eo|Jugoslavujo}}
+* Esperanto: {{t|eo|Jugoslavio}}
 * Faroese: {{t|fo|Jugoslavia}}
 * Finnish: {{t+|fi|Jugoslavia}}
 * French: {{t+|fr|Yougoslavie|f}}
@@ -44,31 +44,25 @@
 * Irish: {{t|ga|An [[Iúgslaiv]]}}
 * Italian: {{t|it|Jugoslavia}}, {{t+|it|Iugoslavia|f}}
 * Japanese: {{t|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
-* Kashubian: {{t|csb|Jugòsławijô|f}}
+{{trans-mid}}
 * Kazakh: {{t|kk|Югославия|sc=Cyrl}}
 * Korean: {{t+|ko|유고슬라비아}}
 * Kyrgyz: {{t|ky|Югославия|sc=Cyrl}}
-{{trans-mid}}
 * Latvian: {{t|lv|Dienvidslāvija|f}}
 * Macedonian: {{t+|mk|Југославија|f}}
 * Malay: {{t|ms|Yugoslavia}}
 * Maltese: {{t|mt|il-[[Jugoslavja]]}}
 * Manx: {{t|gv|Yn [[Yugoslaavey]]}}
-* Old English: {{t|ang|Geugoslafia}}
 * Persian: {{t|fa|یوگسلاوی|tr=Yugoslāvi}}
 * Polish: {{t+|pl|Jugosławia|f}}
 * Portuguese: {{t+|pt|Jugoslávia|f}} ({{qualifier|Portugal}}), {{t+|pt|Iugoslávia|f}} ({{qualifier|Brazil}})
 * Romanian: {{t|ro|Iugoslavia|f}}
 * Russian: {{t+|ru|Югосла́вия|f}}
-* Rusyn: {{t|rue|Югославія|f|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Југо̀сла̄вија|f|sc=Cyrl}}, {{t|sh|Југосла̏вија|f|sc=Cyrl}}
 *: Latin: {{t+|sh|Jugòslāvija|f}}, {{t+|sh|Jugoslȁvija|f}}
 * Slovak: {{t|sk|Juhoslávia|f}}
 * Slovene: {{t+|sl|Jugoslávija|f}}
-* Sorbian:
-*: Lower Sorbian: {{t|dsb|Jugosłowjańska|f}}
-*: Upper Sorbian: {{t|hsb|Juhosłowjanska|f}}
 * Spanish: {{t+|es|Yugoslavia|f}}, {{t|es|Yugoeslavia|f}}
 * Swedish: {{t+|sv|Jugoslavien}}
 * Thai: {{t|th|ยูโกสลาเวีย|tr=yoogòhtlaawia}}
@@ -78,7 +72,6 @@
 * Uzbek: {{t|uz|Yugoslaviya}}
 * Vietnamese: {{t+|vi|Nam Tư}} ({{t|vi|南斯|sc=Hani}})
 * Welsh: {{t+|cy|Iwgoslafia}}
-* Yoruba: {{t|yo|יוגאָסלאַװיע|f}}
 {{trans-bottom}}
 
 ====Related terms====
