--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 {{ja-forms|旧|旧|[[舊]]}}
 ===Etymology===
-{{Han simp|𦾔|f=萑|t=&nbsp;}}
+{{Han simp|舊|f=萑|t=&nbsp;}}
 
 In current form, calligraphical rendering of 臼.
 
